$Id$

History for IMDBPHP2
====================

v2.1.1
-------------------
+ imdb: adding new budget class

v2.1.0 (11.10.2011)
-------------------
! movieposterdb class was broken due to site changes at movieposterdb.com; applied a quick-hack to fix it
! fixes due to site changes: imdb::rating, imdb::goofs
* complete rewrite of imdb_nowplaying class (location and structure of page had changed)
+ some improvements to episode data (see http://projects.izzysoft.de/trac/imdbphp/ticket/255 for details)
! trailers on Moviepilot were broken due to changed URL
! pilot: fixed mainPictures() due to API changes
! pilot_person: fixed photos() due to API changes
+ added basic check for pilot classes (corresponding to the IMDB checks)

v2.0.7 (21.08.2011)
-------------------
! site changes again: fixed imdb_person:name (tnx to GeorgeFive and Qvist)
! same reason: imdb::votes(), imdb::country() and imdb::mpaa_reason()
! same reason, just a couple of days later: imdb rating
! imdb_person class: filmografies no longer listed movie names due to site changes
* imdb_person class: character names w/o id are listed again in filmografies
! IMDB started to sometimes pre- or postfix movie titles with "IMDb", becoming part of the title then
* imdb movie: plotoutline() did not work for unrated movies

v2.0.6 (08.07.2011)
-------------------
! next IMDB site changes: ratings
! imdb_person filmographies: quarters in years, e.g. 1924/II, lead to empty year
* imdb::awards(): minor adjustments by Qvist
! imdb_movielist: fixed the listing methods (were all broken by IMDB site changes some time ago)
+ movies (imdb+pilot): Added new method languages_detailed() to get detailed lang info (name, code and comment of languages used)
+ imdb::episodes(): Result array now also includes season and episode (numbers)
+ movie classes: Added new method aspect_ratio to obtain the screen aspect ratio

v2.0.5 (25.05.2011)
-------------------
! IMDB-Link for person search in demo was wrong